--- a/drawing/build.gradle
+++ b/drawing/build.gradle
@@ -2,24 +2,31 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+
+
+
     defaultConfig {
-        applicationId "com.practice.hencoderpractice"
+        applicationId "com.goodlogic.drawing"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
     implementation 'androidx.core:core:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.0'
